--- a/LoginPage/LoginPage.html
+++ b/LoginPage/LoginPage.html
@@ -20,9 +20,11 @@
  		<form class"register-form">
  		<img src="UMass-logo.png" alt="Smiley face" height="35" width="260" align="center"> <p> </p>
  		<p class="message"> Go Ahead! Register :) <p> </p>
- 		<input type="text" placeholder="User Name"/>	
+ 		<input type="text" placeholder="First Name"/>
+ 		<input type="text" placeholder="Last Name"/>	
+		<input type="text" placeholder="Email/User Name"/>
 		<input type="password" placeholder="Password"/>
-		<input type="text" placeholder="UMass Email Address OR ID"/>
+		<input type="password" placeholder="Re-Type Password"/>
 		
 		
 		<button>Create</button> <p> </p>
